--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,8 +73,8 @@
 
 body {
   height: 100dvh;
-  background-color: #e6e8e6;
-  color: white;
+  background-color: var(--primary-color);
+  color: var(--text-color-light);
   margin: 0;
   backdrop-filter: blur(5px);
   font-family: "Roboto", sans-serif;
